# neowayb3

./: .gitignore  Extract_B3_pt1.py  Extract_B3_pt2.py  Extract_B3_pt3.py  Extract_B3_pt4.py  Historico 2023.py  Historico 2024.py  README.md  api_b3_empresas.py  api_b3_historico.py  bronze_to_silver.py  dashboard.py  pyproject.toml  requiriments.txt  tobigquery.py
