[tool.poetry]
name = "neoway-b3"
version = "0.1.0"
description = ""
authors = ["Danilo <danilo.ferreira@jones.ag>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
pandas = "^2.2.2"
google-cloud = "^0.34.0"
pyarrow = "^16.1.0"
uvicorn = "^0.29.0"
fastapi = "^0.111.0"
google-cloud-bigquery = "^3.23.1"
requests = "^2.32.2"
db-dtypes = "^1.2.0"
streamlit = "^1.35.0"
plotly = "^5.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
